--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 accelerate==0.26.1
+blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -8,6 +9,8 @@ fsspec==2023.12.2
 huggingface-hub==0.20.3
 idna==3.6
 importlib-metadata==7.0.1
+itsdangerous==2.1.2
+Jinja2==3.1.3
 joblib==1.3.2
 langdetect==1.0.9
 MarkupSafe==2.1.5
@@ -44,4 +47,6 @@ tqdm==4.66.1
 transformers==4.37.2
 triton==2.1.0
 typing_extensions==4.9.0
+urllib3==2.2.0
+Werkzeug==3.0.1
 zipp==3.17.0
